# Alien-Visa

./: .gitignore  README.md  env.example  justfile  main.py  pyproject.toml  start.sh  uscis-o1-visa-policy.md
data/: experts.json  mentors.json  stories.json
docs/: 00-product.md  01-system-design.md  02-o1a-criteria.md  03-implementation-slices.md  o1.html  user-workflow.html  user-workflow.md
immigration-copilot/: CONDENSED_README.md  condensed_requirements.txt  immigration_copilot.py  run_condensed.py
immigration-copilot/templates/: condensed_index.html
models/: criteria.py  network.py  resume.py
services/: analyzer.py  challenger.py  database.py  network.py  parser.py  pdf_generator.py  scorer.py  voice.py
templates/: base.html  community.html  experts.html  index.html  mentors.html  results.html
templates/pdf/: assessment_report.html  pdf_styles.css
