[project]
name = "alien"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "pydantic",
    "orjson",
    "openai",
    "pymupdf",
    "python-docx",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]
